# NewFolderFromFiles

./: .gitignore  CMakeLists.txt  README.md  register.bat
.github/workflows/: build.yml
installer/: setup-signed.iss  setup.iss
src/: HotkeyHelper.cpp  NewFolderFromFiles.def  NewFolderFromFilesClassFactory.cpp  NewFolderFromFilesClassFactory.h  NewFolderFromFilesContextMenuHandler.cpp  NewFolderFromFilesContextMenuHandler.h  NewFolderFromFilesGUID.h  dllmain.cpp
